fix(form-field): Correct prototype align end (#1530)

--- a/packages/material-components-web/extend/form-field/mdc-form-field.scss
+++ b/packages/material-components-web/extend/form-field/mdc-form-field.scss
@@ -22,7 +22,8 @@
 }
 
 .ngx-mdc-form-field--end {
-  margin-left: auto;
+  flex-grow: 1;
+  align-self: flex-end;
 }
 
 .ngx-mdc-form-field--padded {
